<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/btn_filter"
    tools:context=".fragments.SearchFragment">


    <SearchView
        android:id="@+id/search_movie"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:clickable="false"
        android:focusable="false"
        android:iconifiedByDefault="false"
        android:title="@string/menu_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:chipSpacingHorizontal="4dp"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/selected_view"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/views" />

            <com.google.android.material.chip.Chip
                android:id="@+id/selected_rating"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating" />

            <com.google.android.material.chip.Chip
                android:id="@+id/selected_likes"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likes" />

            <com.google.android.material.chip.Chip
                android:id="@+id/selected_comment"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment" />


        </com.google.android.material.chip.ChipGroup>

        <Spinner
            android:id="@+id/spinner_years"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@android:color/white"
         />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listMoviesView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_movie"
        tools:visibility="visible">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>