<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutMessages"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorGreyTransparent"
        android:orientation="horizontal">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_img_message"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/com_facebook_profile_picture_blank_square" />

        <TextView
            android:id="@+id/username_message"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="7dp"
            android:text="@string/username"
            app:layout_constraintStart_toEndOf="@+id/user_img_message"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="7dp" />


        <RatingBar
            android:id="@+id/ratingBar2"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_weight="1"
            android:tint="@android:color/white"
            android:numStars="5"
            app:layout_constraintStart_toEndOf="@+id/username_message"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="11dp" />

        <TextView
            android:id="@+id/text_message"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/text_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_img_message"
            app:layout_constraintTop_toBottomOf="@+id/username_message"
            android:layout_marginLeft="8dp" />

        <ImageView
            android:id="@+id/signLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/indicateur_like"
            android:src="@drawable/ic_like"
            android:tint="@color/btnBlue"
            app:layout_constraintStart_toEndOf="@+id/ratingBar2"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/signDislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/indicateur_dislike"
            android:src="@drawable/ic_dislike"
            android:tint="@color/danger"
            app:layout_constraintStart_toEndOf="@+id/signLike"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>