<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RatingBar
        android:id="@+id/eval_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:hint="@string/title_commentaires"
        android:inputType="textMultiLine|text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eval_user" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/indicateur_like"
        android:src="@drawable/ic_like"
        android:tint="@color/btnBlue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/eval_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/eval_user"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/dislike"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/indicateur_dislike"
        android:src="@drawable/ic_dislike"
        android:tint="@color/danger"
        app:layout_constraintBottom_toBottomOf="@+id/eval_user"
        app:layout_constraintEnd_toStartOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/eval_user"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>

